--- a/.github/workflows/aws_dev.yml
+++ b/.github/workflows/aws_dev.yml
@@ -27,12 +27,16 @@ jobs:
     name: Build and Deploy ${{ env.USER_CONTAINER_NAME }}
     uses: ./.github/workflows/deploy-user-service.yml
     with:
-      service_name: ${{ env.USER_CONTAINER_NAME }}
-    env:
+      USER_CONTAINER_NAME: ${{ env.USER_CONTAINER_NAME }}
       AWS_REGION: ${{ env.AWS_REGION }}
       ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
       ECS_CLUSTER: ${{ env.ECS_CLUSTER }}
-      USER_CONTAINER_NAME: ${{ env.USER_CONTAINER_NAME }}
+      BUILD_ENV: ${{ vars.BUILD_ENV }}
+      LOG_LEVEL: ${{ vars.LOG_LEVEL }}}
+      CORS_ALLOWED_ORIGINS: ${{ inputs.CORS_ALLOWED_ORIGINS }}
+    secrets:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
 
   # - name: Build and Deploy ${{ env.QUESTION_CONTAINER_NAME }}
   #   uses: ./.github/workflows/deploy-question-service.yml
