Add service connect config in stack template

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
-Description: Peerprep AWS Cloudformation Stack v1.4
+Description: Peerprep AWS Cloudformation Stack v1.5
 
 Parameters:
   ProjectName:
@@ -11,6 +11,7 @@ Parameters:
     Type: String
     Default: development
     Description: "Environment name that will be appended behind project name for namespacing all cluster resources."
+    AllowedValues: [production, development, test]
   MinContainers:
     Type: Number
     Default: 1
@@ -51,6 +52,9 @@ Parameters:
     Type: String
     Default: event-bus
     Description: "Container/DNS name for event-bus."
+
+Conditions:
+  UseNewRepo: !Not [!Equals [!Ref EnvironmentName, test]]
 
 Metadata: 
   AWS::CloudFormation::Interface: 
@@ -400,7 +404,7 @@ Resources:
     Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'      
     Properties:
       Vpc: !Ref VPC
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'NS']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ns']]
 
   ServiceDiscoveryQuestion:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -412,7 +416,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryQuestion']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-question']]
 
   ServiceDiscoveryMatching:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -424,7 +428,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryMatching']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-matching']]
 
   ServiceDiscoveryUser:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -436,7 +440,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryUser']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-user']]
 
   ServiceDiscoveryAuth:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -448,7 +452,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryAuth']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-auth']]
 
   ServiceDiscoveryCollaboration:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -460,7 +464,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryCollaboration']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-collaboration']]
 
   ServiceDiscoveryEventBus:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -472,7 +476,7 @@ Resources:
         NamespaceId: !Ref PrivateDNSNamespace
       HealthCheckCustomConfig:
         FailureThreshold: 1
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryEventBus']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-event-bus']]
 
   # ServiceDiscoveryHistory:
   #   Type: 'AWS::ServiceDiscovery::Service'
@@ -484,7 +488,7 @@ Resources:
   #       NamespaceId: !Ref PrivateDNSNamespace
   #     HealthCheckCustomConfig:
   #       FailureThreshold: 1
-  #     Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryHistory']]
+  #     Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sd-History']]
 
   #=================================== 
   # ECS Services
@@ -508,7 +512,7 @@ Resources:
           LogDriver: awslogs
           Options:
             awslogs-create-group: true
-            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'service-connect-question']]
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-question']]
             awslogs-region: !Ref AWS::Region
             awslogs-stream-prefix: ecs
         Namespace: !GetAtt PrivateDNSNamespace.Arn
@@ -545,7 +549,7 @@ Resources:
           LogDriver: awslogs
           Options:
             awslogs-create-group: true
-            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'service-connect-matching']]
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-matching']]
             awslogs-region: !Ref AWS::Region
             awslogs-stream-prefix: ecs
         Namespace: !GetAtt PrivateDNSNamespace.Arn
@@ -582,7 +586,7 @@ Resources:
           LogDriver: awslogs
           Options:
             awslogs-create-group: true
-            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'service-connect-user']]
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-user']]
             awslogs-region: !Ref AWS::Region
             awslogs-stream-prefix: ecs
         Namespace: !GetAtt PrivateDNSNamespace.Arn
@@ -619,7 +623,7 @@ Resources:
           LogDriver: awslogs
           Options:
             awslogs-create-group: true
-            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'service-connect-auth']]
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-auth']]
             awslogs-region: !Ref AWS::Region
             awslogs-stream-prefix: ecs
         Namespace: !GetAtt PrivateDNSNamespace.Arn
@@ -650,6 +654,16 @@ Resources:
       ServiceRegistries:
         - RegistryArn: !GetAtt ServiceDiscoveryCollaboration.Arn
           Port: 80
+      ServiceConnectConfiguration:
+        Enabled: true
+        LogConfiguration: 
+          LogDriver: awslogs
+          Options:
+            awslogs-create-group: true
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-auth']]
+            awslogs-region: !Ref AWS::Region
+            awslogs-stream-prefix: ecs
+        Namespace: !GetAtt PrivateDNSNamespace.Arn
       NetworkConfiguration:
           AwsvpcConfiguration:
             AssignPublicIp: DISABLED
@@ -668,9 +682,22 @@ Resources:
       TaskDefinition: !Ref TaskDefinitionEventBus
       LaunchType: FARGATE
       DesiredCount: 1
-      ServiceRegistries:
-        - RegistryArn: !GetAtt ServiceDiscoveryEventBus.Arn
-          Port: 6379
+      ServiceConnectConfiguration:
+        Enabled: true
+        LogConfiguration: 
+          LogDriver: awslogs
+          Options:
+            awslogs-create-group: true
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-event-bus']]
+            awslogs-region: !Ref AWS::Region
+            awslogs-stream-prefix: ecs
+        Namespace: !GetAtt PrivateDNSNamespace.Arn
+        Services: 
+          - ClientAliases: 
+              - DnsName: !Ref EventBusName
+                Port: 6379
+            DiscoveryName: !Ref EventBusName
+            PortName: !Join ['-', [!Ref EventBusName, '6379', 'tcp']]
       NetworkConfiguration:
           AwsvpcConfiguration:
             AssignPublicIp: DISABLED
@@ -713,8 +740,7 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref QuestionServiceName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref QuestionServiceName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:question-service
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref QuestionServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:question-service] 
             Essential: true
             PortMappings:
               - ContainerPort: 80
@@ -746,8 +772,7 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref MatchingServiceName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref MatchingServiceName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:matching-service
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref MatchingServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:matching-service]
             Essential: true
             PortMappings:
               - ContainerPort: 80
@@ -756,8 +781,6 @@ Resources:
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
-              - Name: GATEWAY
-                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
               - Name: EVENT_BUS_CONTAINER_NAME
                 Value: !Ref ServiceDiscoveryEventBus
             LogConfiguration: 
@@ -781,8 +804,7 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref UserServiceName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref UserServiceName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:user-service
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref UserServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:user-service]
             Essential: true
             PortMappings:
               - ContainerPort: 80
@@ -814,8 +836,7 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref AuthServiceName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref AuthServiceName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:auth-service
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref AuthServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:auth-service]
             Essential: true
             PortMappings:
               - ContainerPort: 80
@@ -847,8 +868,7 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref CollaborationServiceName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref CollaborationServiceName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:collaboration-service
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref CollaborationServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:collaboration-service]
             Essential: true
             PortMappings:
               - ContainerPort: 80
@@ -858,9 +878,7 @@ Resources:
               - Name: SERVICE_PORT
                 Value: 80
               - Name: EVENT_BUS_CONTAINER_NAME
-                Value: peerprep-development-serviceeventbus.peerprep-development-NS
-              - Name: GATEWAY
-                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
+                Value: !Ref EventBusName
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -869,12 +887,12 @@ Resources:
                 awslogs-region: !Ref AWS::Region
                 awslogs-stream-prefix: ecs
           - Name: 'collaboration-cache'
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':collaboration-cache']]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:collaboration-cache
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', 'collaboration-cache']], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:collaboration-cache]
             Essential: true
             PortMappings:
               - ContainerPort: 6379
                 Protocol: tcp
+                Name: !Join ['-', ['collaboration-cache', '6379', 'tcp']]
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -896,14 +914,13 @@ Resources:
         - FARGATE
       ContainerDefinitions:
           - Name: !Ref EventBusName
-            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref EventBusName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:event-bus
+            Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref EventBusName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:event-bus]
             Essential: true
             PortMappings:
               - ContainerPort: 6379
                 HostPort: 6379
                 Protocol: tcp
-                Name: event-bus-6379-tcp
+                Name: !Join ['-', [!Ref EventBusName, '6379', 'tcp']]
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -925,7 +942,7 @@ Resources:
   #       - FARGATE
   #     ContainerDefinitions:
   #         - Name: 'history-service'
-  #           Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':history-service']]
+  #           Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref HistoryServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:history-service]
   #           Essential: true
   #           PortMappings:
   #             - ContainerPort: 80
@@ -1248,7 +1265,6 @@ Resources:
       RouteKey: "PUT /auth/api/changePassword/{id}"
       Target: !Sub "integrations/${IntegrationAuth}"
 
-
   # Route for User 
   RouteUserApiHealth:
     Type: "AWS::ApiGatewayV2::Route"
@@ -1352,6 +1368,7 @@ Resources:
       RouteKey: "ANY /collaboration/socket/{proxy}"
       Target: !Sub "integrations/${IntegrationCollaboration}"
 
+  # API Gateway integrations 
   IntegrationQuestion:
     Type: "AWS::ApiGatewayV2::Integration"
     Properties:
@@ -1425,18 +1442,6 @@ Resources:
         - !Ref PrivateSubnet
 
 Outputs:
-  # APITestPage:
-  #   Description: The URL of the sample web app client, used to test the sample API
-  #   Value: !Join
-  #     - ''
-  #     - - "https://master.d2wfcislijzove.amplifyapp.com/?stackregion="
-  #       - !Ref 'AWS::Region'
-  #       - "&stackhttpapi="
-  #       - !Ref 'HttpApi'
-  #       - "&stackuserpool="
-  #       - !Ref 'UserPool'
-  #       - "&stackuserpoolclient="
-  #       - !Ref 'UserPoolClient'
   APIInvokeURL:
     Description: Invoke URL for the HTTP API
     Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
