--- a/backend/matching-service/Dockerfile
+++ b/backend/matching-service/Dockerfile
@@ -23,7 +23,7 @@ ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 # event bus = redis://<container_name>:6380/
-ARG EVENT_BUS_CONTAINER_NAME=${EVENT_BUS_CONTAINER_NAME}
+ARG EVENT_BUS_CONTAINER_NAME=event-bus
 ENV EVENT_BUS_CONTAINER_NAME=$EVENT_BUS_CONTAINER_NAME
 
 # Copy only the production artifacts from the build stage
