--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -22,6 +22,9 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
+ENV AUTH_ENDPOINT="auth/api/validate"
+ENV AUTH_ADMIN_ENDPOINT="auth/api/validateAdmin"
+
 ARG PORT=5100
 ENV PORT=$PORT
 
