--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -51,10 +51,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- backend/${{ env.QUESTION_CONTAINER_NAME }}; then
                 echo "No changes in question-service directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in question-service directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash
 
@@ -76,10 +76,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- backend/${{ env.MATCHING_CONTAINER_NAME }}; then
                 echo "No changes in matching-service directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in matching-service directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash            
           
@@ -102,10 +102,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- backend/${{ env.AUTH_CONTAINER_NAME }}; then
                 echo "No changes in auth-service directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in auth-service directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash      
 
@@ -130,10 +130,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- backend/${{ env.USER_CONTAINER_NAME }}; then
                 echo "No changes in user-service directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in user-service directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash
 
@@ -156,10 +156,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- backend/${{ env.COLLABORATION_CONTAINER_NAME }}; then
                 echo "No changes in collaboration-service directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in collaboration-service directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash      
 
@@ -182,10 +182,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}; then
                 echo "No changes in collaboration-cache directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in collaboration-cache directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash   
 
@@ -203,10 +203,10 @@ jobs:
         run: |
             if git diff --quiet HEAD~1 -- database/${{ env.EVENT_BUS_CONTAINER_NAME }}; then
                 echo "No changes in event-bus directory"
-                echo "::set-output name=changes::false"
+                echo "changes=false" >> "$GITHUB_OUTPUT"
             else
                 echo "Changes detected in event-bus directory"
-                echo "::set-output name=changes::true"
+                echo "changes=true" >> "$GITHUB_OUTPUT"
             fi
         shell: bash  
 
