--- a/.github/workflows/run_frontend_build.yml
+++ b/.github/workflows/run_frontend_build.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           cd frontend/  
           npm ci --omit=dev
+          npm install @type/d3 --save
 
       - name: Build
         run: |
