--- a/.github/workflows/run_frontend_build.yml
+++ b/.github/workflows/run_frontend_build.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd frontend/  
           npm ci --omit=dev
-          npm install @type/d3 --save
+          npm install @types/d3 --save
 
       - name: Build
         run: |
