--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -44,20 +44,20 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Check for Changes in question-service directory
-        id: check-question-service-changes
-        run: |
-            if git diff --quiet HEAD~1 -- backend/${{ env.QUESTION_CONTAINER_NAME }}; then
-                echo "No changes in question-service directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in question-service directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash
+      # - name: Check for Changes in question-service directory
+      #   id: check-question-service-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- backend/${{ env.QUESTION_CONTAINER_NAME }}; then
+      #           echo "No changes in question-service directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in question-service directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash
 
       - name: Build, tag, and push ${{ env.QUESTION_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-question-service-changes.outputs.changes == 'true'
+        # if: steps.check-question-service-changes.outputs.changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: backend/${{ env.QUESTION_CONTAINER_NAME }}
@@ -69,20 +69,20 @@ jobs:
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             DATABASE_URL=${{ secrets.DATABASE_URL }}
 
-      - name: Check for Changes in matching-service directory
-        id: check-matching-service-changes
-        run: |
-            if git diff --quiet HEAD~1 -- backend/${{ env.MATCHING_CONTAINER_NAME }}; then
-                echo "No changes in matching-service directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in matching-service directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash            
+      # - name: Check for Changes in matching-service directory
+      #   id: check-matching-service-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- backend/${{ env.MATCHING_CONTAINER_NAME }}; then
+      #           echo "No changes in matching-service directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in matching-service directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash            
           
       - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-matching-service-changes.outputs.changes == 'true'
+        # if: steps.check-matching-service-changes.outputs.changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: backend/${{ env.MATCHING_CONTAINER_NAME }}
@@ -95,20 +95,20 @@ jobs:
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
 
-      - name: Check for Changes in auth-service directory
-        id: check-auth-service-changes
-        run: |
-            if git diff --quiet HEAD~1 -- backend/${{ env.AUTH_CONTAINER_NAME }}; then
-                echo "No changes in auth-service directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in auth-service directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash      
+      # - name: Check for Changes in auth-service directory
+      #   id: check-auth-service-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- backend/${{ env.AUTH_CONTAINER_NAME }}; then
+      #           echo "No changes in auth-service directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in auth-service directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash      
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-auth-service-changes.outputs.changes == 'true'
+        # if: steps.check-auth-service-changes.outputs.changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: backend/${{ env.AUTH_CONTAINER_NAME }}
@@ -123,20 +123,20 @@ jobs:
             NM_MAIL=${{ secrets.NM_MAIL }}
             NM_PASS=${{ secrets.NM_PASS }}
 
-      - name: Check for Changes in user-service directory
-        id: check-user-service-changes
-        run: |
-            if git diff --quiet HEAD~1 -- backend/${{ env.USER_CONTAINER_NAME }}; then
-                echo "No changes in user-service directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in user-service directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash
+      # - name: Check for Changes in user-service directory
+      #   id: check-user-service-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- backend/${{ env.USER_CONTAINER_NAME }}; then
+      #           echo "No changes in user-service directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in user-service directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash
 
       - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-user-service-changes.outputs.changes == 'true'
+        # if: steps.check-user-service-changes.outputs.changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: backend/${{ env.USER_CONTAINER_NAME }}
@@ -149,20 +149,20 @@ jobs:
             DATABASE_URL=${{ secrets.DATABASE_URL }}
             EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
 
-      - name: Check for Changes in collaboration-service directory
-        id: check-collaboration-service-changes
-        run: |
-            if git diff --quiet HEAD~1 -- backend/${{ env.COLLABORATION_CONTAINER_NAME }}; then
-                echo "No changes in collaboration-service directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in collaboration-service directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash      
+      # - name: Check for Changes in collaboration-service directory
+      #   id: check-collaboration-service-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- backend/${{ env.COLLABORATION_CONTAINER_NAME }}; then
+      #           echo "No changes in collaboration-service directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in collaboration-service directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash      
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-collaboration-service-changes == 'true'
+        # if: steps.check-collaboration-service-changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: backend/${{ env.COLLABORATION_CONTAINER_NAME }}
@@ -175,20 +175,20 @@ jobs:
             REDIS_URL=${{ secrets.COLLABORATION_CACHE_URL }}
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
       
-      - name: Check for Changes in collaboration-cache directory
-        id: check-collaboration-cache-changes
-        run: |
-            if git diff --quiet HEAD~1 -- database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}; then
-                echo "No changes in collaboration-cache directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in collaboration-cache directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash   
+      # - name: Check for Changes in collaboration-cache directory
+      #   id: check-collaboration-cache-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}; then
+      #           echo "No changes in collaboration-cache directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in collaboration-cache directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash   
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-collaboration-cache-changes == 'true'
+        # if: steps.check-collaboration-cache-changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
@@ -196,20 +196,20 @@ jobs:
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
 
 
-      - name: Check for Changes in event-bus directory
-        id: check-event-bus-changes
-        run: |
-            if git diff --quiet HEAD~1 -- database/${{ env.EVENT_BUS_CONTAINER_NAME }}; then
-                echo "No changes in event-bus directory"
-                echo "changes=false" >> "$GITHUB_OUTPUT"
-            else
-                echo "Changes detected in event-bus directory"
-                echo "changes=true" >> "$GITHUB_OUTPUT"
-            fi
-        shell: bash  
+      # - name: Check for Changes in event-bus directory
+      #   id: check-event-bus-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- database/${{ env.EVENT_BUS_CONTAINER_NAME }}; then
+      #           echo "No changes in event-bus directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in event-bus directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash  
 
       - name: Build, tag, and push ${{ env.EVENT_BUS_CONTAINER_NAME }} image to Amazon ECR
-        if: steps.check-event-bus-changes == 'true'
+        # if: steps.check-event-bus-changes == 'true'
         uses: docker/build-push-action@v5
         with: 
           context: database/${{ env.EVENT_BUS_CONTAINER_NAME }}
@@ -274,7 +274,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Download ${{ matrix.service.name }} task definition
-        if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
+        # if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
         id: download-task-def
         env:
           FAMILY: ${{ matrix.service.ecs_task_def }}
@@ -283,7 +283,7 @@ jobs:
           echo "file=$FAMILY.json" >> "$GITHUB_OUTPUT"
 
       - name: Fill in the ${{ matrix.service.name }} image ID in the Amazon ECS task definition
-        if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
+        # if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
@@ -292,7 +292,7 @@ jobs:
           image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ matrix.service.name }}
 
       - name: Deploy Amazon ECS ${{ matrix.service.name }} task definition
-        if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
+        # if: steps.check-${{ matrix.service.name }}-changes.outputs.changes == 'true'
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
