--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1033,6 +1033,16 @@ Resources:
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
 
+  AutoScalingTargetCollaboration:
+    Type: AWS::ApplicationAutoScaling::ScalableTarget
+    Properties:
+      MinCapacity: !Ref MinContainers
+      MaxCapacity: !Ref MaxContainers
+      ResourceId: !Join ['/', [service, !Ref ECSCluster, !GetAtt ServiceCollaboration.Name]]
+      ScalableDimension: ecs:service:DesiredCount
+      ServiceNamespace: ecs
+      RoleARN: !GetAtt AutoScalingRole.Arn
+
   AutoScalingTargetHistory:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
     Properties:
