--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -957,12 +957,13 @@ Resources:
       RequiresCompatibilities:
         - FARGATE
       ContainerDefinitions:
-          - Name: 'history-service'
+          - Name: !Ref HistoryServiceName
             Image: !If [UseNewRepo, !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref HistoryServiceName]], 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:history-service]
             Essential: true
             PortMappings:
               - ContainerPort: 80
                 Protocol: tcp
+                Name: !Join ['-', [!Ref HistoryServiceName, '80', 'tcp']]
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
