--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -220,7 +220,7 @@ jobs:
         # if: steps.check-event-bus-changes == 'true'
         uses: docker/build-push-action@v5
         with: 
-          context: database/${{ env.HISTORY_CONTAINER_NAME }}
+          context: backend/${{ env.HISTORY_CONTAINER_NAME }}
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.HISTORY_CONTAINER_NAME }}
 
