--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
-Description: Peerprep AWS Cloudformation Stack v1.5
+Description: Peerprep AWS Cloudformation Stack v1.6
 
 Parameters:
   ProjectName:
@@ -660,7 +660,7 @@ Resources:
           LogDriver: awslogs
           Options:
             awslogs-create-group: true
-            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-auth']]
+            awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'sc-collab']]
             awslogs-region: !Ref AWS::Region
             awslogs-stream-prefix: ecs
         Namespace: !GetAtt PrivateDNSNamespace.Arn
@@ -798,7 +798,7 @@ Resources:
               - Name: SERVICE_PORT
                 Value: 80
               - Name: EVENT_BUS_CONTAINER_NAME
-                Value: !Ref ServiceDiscoveryEventBus
+                Value: !Sub 'http://${EventBusName}'
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -1443,7 +1443,7 @@ Resources:
       ApiKeyRequired: false
       AuthorizationType: "NONE"
       RequestParameters: {}
-      RouteKey: "DELETE /history/user/{userId}/question/{questionId}"
+      RouteKey: "DELETE /history/api/history/user/{userId}/question/{questionId}"
       Target: !Sub "integrations/${IntegrationHistory}"
   RouteHistoryApiGetQuestionCodeHistory:
     Type: "AWS::ApiGatewayV2::Route"
@@ -1452,7 +1452,7 @@ Resources:
       ApiKeyRequired: false
       AuthorizationType: "NONE"
       RequestParameters: {}
-      RouteKey: "GET /history/user/{userId}/question/{questionId}/code"
+      RouteKey: "GET /history/api/history/user/{userId}/question/{questionId}/code"
       Target: !Sub "integrations/${IntegrationHistory}"
   RouteHistoryApiUpdateQuestionCodeSubmission:
     Type: "AWS::ApiGatewayV2::Route"
@@ -1461,7 +1461,7 @@ Resources:
       ApiKeyRequired: false
       AuthorizationType: "NONE"
       RequestParameters: {}
-      RouteKey: "PUT /history/user/{userId}/question/{questionId}/code"
+      RouteKey: "PUT /history/api/history/user/{userId}/question/{questionId}/code"
       Target: !Sub "integrations/${IntegrationHistory}"
 
 
