--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -798,7 +798,7 @@ Resources:
               - Name: SERVICE_PORT
                 Value: 80
               - Name: EVENT_BUS_CONTAINER_NAME
-                Value: !Ref ServiceDiscoveryEventBus
+                Value: !Ref EventBusName
             LogConfiguration: 
               LogDriver: awslogs
               Options:
