--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 RUN npm install
 # If you are building your code for production
-# RUN npm ci --omit=dev
+RUN npm ci --omit=dev
 RUN npm run build
 
 # Bundle app source
